Fixed issue version number not showing in appmenu on windows

--- a/client/main/ribbon/appmenu.css
+++ b/client/main/ribbon/appmenu.css
@@ -7,10 +7,11 @@
 
 .jmv-ribbon-appmenu-menu-panel {
     position: fixed ;
+    display: flex;
     right: 0px ;
     top: 0px ;
     width: 0px;
-    height: 100% ;
+    bottom: 0px;
     background-color: #F4F4F4 ;
     color: #555555 ;
     margin: 0 ;
@@ -28,10 +29,8 @@ body.windows .jmv-ribbon-appmenu-menu-panel {
 
 .jmv-ribbon-appmenu-menu {
     display: flex ;
-    position: fixed ;
     overflow: hidden;
     margin: 0 ;
-    height: 100% ;
     font-size: 70% ;
     text-align: left ;
     flex-direction: column;
@@ -88,7 +87,6 @@ body.windows .jmv-ribbon-appmenu-menu-panel {
 }
 
 .jmv-ribbon-appmenu-content {
-    height: 100%;
     margin: 15px 0px;
 }
 
@@ -154,9 +152,12 @@ input[type="checkbox"].jmv-ribbon-appmenu-checkbox {
     background-color: #E0E0E0 ;
 }
 
+.jmv-ribbon-appmenu-spacer {
+    flex-grow: 1;
+}
+
 .jmv-ribbon-appmenu-version {
     height: 45px;
-    flex-grow: 1;
     text-align: center;
     vertical-align: middle;
     line-height: 45px;
